# haohaochifan

./: .gitignore  CMakeLists.txt  README.md
app/android/: AndroidManifest.xml
app/qml/: FoodPage.qml  Main.qml  MealLogPage.qml  SchedulePage.qml  SectionCard.qml  StyledButton.qml  StyledComboBox.qml  StyledTextArea.qml  StyledTextField.qml  Theme.qml
data/: schema.sql
docs/: android-frontend-design-optimization-plan.md  chat-style-frontend-refactor-plan.md  data-model.md  env-recovery.md  handoff.md  llm-natural-language-business-plan.md  llm-supplement-prompt.md  llm-supplement-rules.md  memory.md  next-task-prompt.md  product-rules.md  project-plan.md  recommendation-metrics-table.md  resume-prompt.md  v3-plan.md
src/: main.cpp
src/core/: appconfig.cpp  appconfig.h  appstate.cpp  appstate.h  domainmodels.cpp  domainmodels.h  foodmanager.cpp  foodmanager.h  meallogmanager.cpp  meallogmanager.h  schedulemanager.cpp  schedulemanager.h
src/data/: databasemanager.cpp  databasemanager.h  dishrepository.cpp  dishrepository.h  mealfeedbackrepository.cpp  mealfeedbackrepository.h  meallogrepository.cpp  meallogrepository.h  merchantrepository.cpp  merchantrepository.h  planningrepository.cpp  planningrepository.h  recommendationrecordrepository.cpp  recommendationrecordrepository.h  schedulerepository.cpp  schedulerepository.h
src/recommendation/: recommendationengine.cpp  recommendationengine.h
tools/validation/: main.cpp
